# Strava_Agent

./: .env.example  .gitignore  A2A_USAGE.md  CHANGELOG.md  EXAMPLE_PROMPTS.md  EXAMPLE_QUERIES.md  README.md  TROUBLESHOOTING.md  demo_visual_resources.py  get_strava_token.py  pyproject.toml  simple_strava_agent.py  test_agent.py  test_strava_examples.py
src/beeai_agents/: agent.py  strava_custom_tools.py  visual_formatter.py
