[project]
name = "beeai-agents"
version = "0.2.0"
description = "Strava AI Agent with BeeAI, AgentStack, and A2A support"
readme = "README.md"
authors = [
    { name = "Brun3y" },
    { name = "Edgar Bruney" }
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "agentstack-sdk==0.4.0rc1",
    "beeai_framework>=0.1.76",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[project.scripts]
server = "beeai_agents.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
